platform/baseline/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-product-demo
  labels:
    app.kubernetes.io/part-of: enterprise-data-lakehouse
    platform.maya/type: data-product
