platform/baseline/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edl-platform
  labels:
    platform.maya.example/zone: platform
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: edl-data
  labels:
    platform.maya.example/zone: data
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: edl-observability
  labels:
    platform.maya.example/zone: observability
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
